fixed header full width not showing

--- a/work-samples/deliveroo/css/main.css
+++ b/work-samples/deliveroo/css/main.css
@@ -45,9 +45,16 @@ body {
 
 /* header */
 
-.header {
+.header__wrapper {
   width: 100%;
-  max-width: 1100px;
+  background: #00ccbc;
+  display: flex;
+  justify-content: center;
+}
+
+.header__wrapper {
+  width: 100%;
+  position: static;
   background: #00ccbc;
   display: flex;
   flex-direction: column;
@@ -84,6 +91,8 @@ body {
 
 .header__content {
   padding: 0 20px 20px;
+  margin: 0 0 0 auto;
+  max-width: 550px;
   display: flex;
   flex-direction: column;
 }
@@ -439,9 +448,8 @@ body {
 
   /* header */
 
-  .header {
-    margin-top: 70px;
-    height: 400px;
+  .header__wrapper {
+    height: 500px;
     width: 100%;
     background: #00ccbc;
     display: flex;
@@ -472,7 +480,7 @@ body {
 
   .header__logo {
     position: absolute;
-    top: calc(50% - 110px);
+    top: calc(50% - 80px);
     width: 200px;
     height: 200px;
     z-index: 15;
@@ -488,10 +496,10 @@ body {
   }
 
   .header__intro {
+    padding-top: 70px;
     font-size: 2em;
     margin-bottom: 20px;
     font-weight: bold;
-    color: white;
   }
 
   .header__find {
